BP-833: Rma integration
Change-Id: Id835b5d37b79a32a4a008edb47ef978dbef1b1fc